<resources>
    <string name="app_name">VLIFE</string>

    <string name="company_name">Vlife Co., Ltd.</string>

    <string name="but_done">Done</string>
    <string name="title_tab_start_date">Start Date</string>
    <string name="ttile_tab_end_date">End Date</string>

    <string name="openDrawer"></string>
    <string name="closeDrawer"></string>

    <string name="open_Drawer"></string>
    <string name="close_Drawer"></string>

    /********************Authentication page********************/
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="buttonsignin">Log in</string>
    <string name="rememberme">Remember me</string>
    <string name="forgetpassword">Forget password</string>
    <string name="or">or</string>
    <string name="buttonsignup">Register</string>
    <string name="please_log_in">Please log in.</string>
    /********************Authentication page********************/

    /***********************Dialog alert************************/
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_success">Success</string>
    <string name="dialog_title_chooser">Choose image</string>
    <string name="dialog_msg_network_error">No internet connection.</string>
    <string name="dialog_msg_login_empty">Username or password empty.</string>
    <string name="dialog_msg_login_fail">Username or password invalid.</string>
    <string name="dialog_msg_r_u_sure_for_delete">Do you want to delete this item?</string>
    <string name="dialog_msg_email_empty">Please enter your registered email.</string>
    <string name="dialog_msg_no_email_register">Email account not found.</string>
    <string name="dialog_msg_sent_email_success">Sent password to your email.</string>
    <string name="dialog_msg_delete_completed">Deleted</string>
    <string name="dialog_msg_apply_error">Can not send order</string>
    <string name="dialog_msg_apply_success">Order completed</string>
    <string name="dialog_choose_gallery_or_camera">Choose from gallery or take a picture.</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_ok">Ok</string>
    <string name="dialog_btn_settings">Settings</string>
    <string name="dialog_btn_gallery">Gallery</string>
    <string name="dialog_btn_camera">Camera</string>
    /***********************Dialog alert************************/

    /*************************Menu title************************/
    <string name="main_menu_profile">Profile</string>
    <string name="main_menu_register">Register</string>
    <string name="main_menu_news">News &amp; Promotion</string>
    <string name="main_menu_product">Product</string>
    <string name="main_menu_purchase">Purchase</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_logout">Log out</string>

    /****************Profile menu******************/
    <string name="profile_menu_home">Home</string>
    <string name="profile_menu_buy_history">Order History</string>
    <string name="profile_menu_bill_hold">Bill Hold</string>
    <string name="profile_menu_point">My Points</string>
    <string name="profile_menu_redeem_history">Redeem History</string>
    <string name="profile_menu_recomend">Recomend Diagram</string>
    <string name="profile_menu_upline">Upline Diagram</string>
    <string name="profile_menu_comission">Comission</string>
    /*************************Menu title************************/

    /*************************Forget password*********************/
    <string name="edittext_hint_forget">Email</string>
    <string name="text_to_reset_password">We just need your registered Email to sent \nyour password reset intructions.</string>
    /*************************Forget password*********************/

    /**************************Service unvailable*********************/
    <string name="service_unvailable">Sorry, something went wrong. Please try again.</string>
    <string name="unvailable_item">Sorry, No items yet.</string>
    /**************************Service unvailable*********************/

    /****************************Cart*******************************/
    <string name="cart_title">Cart</string>
    <string name="title_pv">PV</string>
    <string name="price_symbol">฿</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="added">Added</string>
    <string name="total_price">Total</string>
    <string name="button_payment">Payment</string>
    <string name="cart_empty">Cart is empty.</string>
    <string name="cart_amount">Amount</string>
    /****************************Cart*******************************/

    /*****************************System*****************************/
    <string name="menu_group_system">System</string>
    <string name="menu_group_member">Member</string>
    <string name="try_again">Try again</string>
    <string name="button_next">Next</string>
    <string name="button_apply">Apply</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_update">Update</string>
    /*****************************System*****************************/

    /*****************************Title*******************************/
    <string name="title_deliver">Deliver</string>
    <string name="title_detail">Detail</string>
    <string name="title_pay">Payment</string>
    <string name="title_summary">Summary</string>
    <string name="title_order_for">Order for code</string>
    <string name="title_bil_type">Bill Type</string>
    <string name="title_order_list">Order List</string>
    <string name="title_sum_point">Total Points</string>
    <string name="title_sum_total">Total Price</string>
    <string name="title_send">Delivery Charge</string>
    <string name="title_net_price">Total to pay</string>
    /*****************************Title*******************************/

    /****************************Bill Type************************/
    <string name="bill_type_normal">Normal</string>
    <string name="bill_type_keep">Keep</string>
    <string name="bill_type_hold">Hold</string>
    /****************************Bill Type************************/

    /**************************Payment channel***********************/
    <string name="title_bank_tranfer">Bank Transfer</string>
    <string name="bank_name_k_bank">KBANK</string>
    <string name="bank_name_bbl">BKK</string>
    <string name="bank_name_scb">SCB</string>
    <string name="title_crdit_card">Credit Card</string>
    <string name="hint_card_number">Card Number</string>
    <string name="hint_card_month">Month</string>
    <string name="hint_card_year">Year</string>
    <string name="hint_card_ccv">CVV/CVN</string>
    /**************************Payment channel***********************/

    /************************Delivery*************************/
    <string name="delivery_choice">Delivery choice</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_address">Delivery address</string>
    <string name="massenger">Massenger (Recommends)</string>
    <string name="thai_post">Thai post (EMS)</string>
    <string name="address_delivery">Address for delivery</string>
    <string name="add_address">Add new address</string>
    /************************Delivery*************************/

    /************************Form address*************************/
    <string name="address_name">Full name</string>
    <string name="address_phone">Phone/Mobile</string>
    <string name="address_number">Number/Room</string>
    <string name="address_building">Building</string>
    <string name="address_village">Village</string>
    <string name="address_soi">Soi</string>
    <string name="address_road">Road</string>
    <string name="address_province">Province</string>
    <string name="address_district">District</string>
    <string name="address_sub_district">Sub District</string>
    <string name="address_zipcode">Zipcode</string>

    /************************Register title**************************/
    <string name="register_main_title">Register Main</string>
    <string name="register_partner_title">Register Partner</string>
    <string name="register_address">Address</string>
    <string name="register_sending_address">Sending Address</string>
    <string name="register_same_address">Same as address</string>
    /************************Register title**************************/

    /************************Register form1***************************/
    <string name="register_main_recommend_code">Recommend Code</string>
    <string name="register_main_recommend_name">Recommend Name</string>
    <string name="register_main_upline_code">Upline Code</string>
    <string name="register_main_upline_name">UPline Name</string>
    <string name="register_main_type">Type</string>
    <string name="register_main_side">Side</string>
    <string name="register_main_side_right">Right</string>
    <string name="register_main_side_left">Left</string>
    <string name="register_main_prefix_name">Prefix Name</string>
    <string name="register_main_name">Name/Company</string>
    <string name="register_main_gender">Gender</string>
    <string name="register_main_gender_male">Male</string>
    <string name="register_main_gender_female">Female</string>
    <string name="register_main_birthdate">dd/MM/yyyy</string>
    <string name="register_main_nationality">Nationality</string>
    <string name="register_main_id">ID Card/Tax ID</string>
    <string name="register_main_phone">Phone</string>
    <string name="register_main_mobile">Mobile</string>
    <string name="register_main_email">Email</string>
    <string name="register_main_line_id">Line Id</string>
    <string name="register_main_facebook">Facebook</string>
    <string name="register_main_wechat">We Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    /************************Register form1***************************/

    /************************Tab***************************/
    <string name="tab1_title">Personal Data</string>
    <string name="tab2_title">Sending Address</string>
    /************************Tab***************************/

    /***********************Member**************************/
    <string name="member_code">Member Code</string>
    /***********************Member**************************/

    /***********************Commission**********************/
    <string name="title_commission_day">Day</string>
    <string name="title_commission_month">Month</string>
    <string name="title_commission_year">Year</string>
    <string name="title_commission_travel">Travel</string>
    /***********************Commission**********************/

    /************************Paid*****************************/
    <string name="order_number">Order Number</string>
    <string name="order_total">Total</string>
    <string name="paid_date">Date</string>
    <string name="paid_time">Time</string>
    <string name="paid_picture">Picture</string>
    <string name="upload_file">Upload file</string>
    /************************Paid*****************************/

    /************************Order history***********************/
    <string name="history_title_number">Number</string>
    /************************Order history***********************/

    /*************************Hold***********************/
    <string name="hold_title_pieces">Pieces</string>
    /*************************Hold***********************/

    /*****************************************************/
    <string name="spinner_select_province">Please select province</string>
    <string name="spinner_select_district">Please select district</string>
    <string name="spinner_select_subdistrict">Please select sub district</string>
    /*****************************************************/

</resources>
