<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="teerayut.dev.vlife.payment.delivery.DeliveryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_choice"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/group_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_msn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/massenger"
                    android:gravity="left|center"
                    android:paddingLeft="8dp"
                    style="@style/radionbutton"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <RadioButton
                    android:id="@+id/radio_ems"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:paddingLeft="8dp"
                    style="@style/radionbutton"
                    android:text="@string/thai_post"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <ImageView
                android:id="@+id/image_delivery"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/kerry"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_address"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/group_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_address"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/address_delivery"
                    android:gravity="left|center"
                    android:paddingLeft="8dp"
                    style="@style/radionbutton"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <RadioButton
                    android:id="@+id/radio_add"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:paddingLeft="8dp"
                    style="@style/radionbutton"
                    android:text="@string/add_address"/>

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <include
            android:id="@+id/address"
            android:visibility="gone"
            layout="@layout/form_address"/>

        <include
            android:id="@+id/insert_address"
            android:visibility="gone"
            layout="@layout/form_insert_address"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/button_delivery_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:text="@string/button_next"
            android:textColor="@color/White"/>
    </RelativeLayout>

</FrameLayout>
